--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
 	"useTabs": true,
+	"tabWidth": 4,
+	"semi": false,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
+	"trailingComma": "es5",
+	"printWidth": 80,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
 	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
