--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"mdsvex": "^0.10.6",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"rollup": "^3.17.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
+		"typescript-plugin-toml": "^0.2.0",
 		"vite": "^4.0.0",
-		"mdsvex": "^0.10.6"
+		"vite-plugin-toml": "^0.5.0"
 	},
 	"type": "module"
 }
