--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"rollup": "^3.17.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"toml-js": "^0.0.8",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"typescript-plugin-toml": "^0.2.0",
