--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@types/debug": "^4.1.7",
 		"@types/lodash": "^4.14.191",
+		"@types/lz-string": "^1.3.34",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"debug": "^4.3.4",
@@ -24,6 +25,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"lodash": "^4.17.21",
+		"lz-string": "^1.4.4",
 		"mdsvex": "^0.10.6",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
