--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@ltd/j-toml": "^1.38.0",
 		"@picocss/pico": "^1.5.7",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
@@ -32,7 +33,6 @@
 		"rollup": "^3.17.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
-		"toml-js": "^0.0.8",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"typescript-plugin-toml": "^0.2.0",
