--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"rollup": "^3.17.2",
+		"sass": "^1.58.3",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
