--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@ltd/j-toml": "^1.38.0",
 		"@picocss/pico": "^1.5.9",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
