--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"@ltd/j-toml": "^1.38.0",
-		"@picocss/pico": "^1.5.9",
+		"@picocss/pico": "github:picocss/pico#v2",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/debug": "^4.1.7",
