--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/debug": "^4.1.7",
+		"@types/lodash": "^4.14.194",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"debug": "^4.3.4",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"lodash": "^4.17.21",
 		"lz-string": "^1.5.0",
 		"mdsvex": "^0.10.6",
 		"prettier": "^2.8.0",
