--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"iconify-icon": "^1.0.7",
 		"lodash": "^4.17.21",
 		"lz-string": "^1.5.0",
 		"mdsvex": "^0.10.6",
