--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
 	"devDependencies": {
 		"@ltd/j-toml": "^1.38.0",
 		"@picocss/pico": "^2.0.3",
-		"@sveltejs/adapter-auto": "^2.1.1",
-		"@sveltejs/kit": "^1.30.4",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/debug": "^4.1.12",
 		"@types/lodash": "^4.14.202",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -35,7 +36,7 @@
 		"svelte-check": "^3.6.4",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^4.5.2"
+		"vite": "^5.0.0"
 	},
 	"type": "module"
 }
