Fix Korea launch plan title.

--- a/src/lib/plans/korea.toml
+++ b/src/lib/plans/korea.toml
@@ -1,4 +1,4 @@
-title = 'Default Launch Plan'
+title = 'Korea Launch Plans'
 
 [Shopping.Danawa]
 default = "https://search.danawa.com/dsearch.php?k1=QUERY"
