--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
 {
 	"name": "multi-launch",
-	"version": "0.0.1",
 	"private": true,
+	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"lint": "eslint . && prettier --check .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@ltd/j-toml": "^1.38.0",
+		"@eslint/compat": "^1.2.5",
 		"@picocss/pico": "^2.1.1",
-		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/kit": "^2.42.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.0",
+		"@eslint/js": "^9.22.0",
+		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/kit": "^2.22.0",
+		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@types/debug": "^4.1.12",
+		"@types/node": "^22",
 		"@types/lodash": "^4.17.20",
-		"@typescript-eslint/eslint-plugin": "^8.44.0",
-		"@typescript-eslint/parser": "^8.44.0",
 		"debug": "^4.4.3",
-		"eslint": "^9.36.0",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint": "^9.22.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
 		"iconify-icon": "^3.0.1",
 		"lodash": "^4.17.21",
+		"globals": "^16.0.0",
 		"lz-string": "^1.5.0",
 		"mdsvex": "^0.12.6",
-		"prettier": "^3.6.2",
-		"prettier-plugin-svelte": "^3.4.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
 		"sass": "^1.93.0",
-		"svelte": "^5.39.3",
-		"svelte-check": "^4.3.1",
-		"tslib": "^2.8.1",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.6"
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.20.0",
+		"vite": "^7.0.4",
+		"vite-plugin-devtools-json": "^1.0.0"
 	},
-	"type": "module",
 	"packageManager": "pnpm@10.12.2"
 }
