--- a/package.json
+++ b/package.json
@@ -14,23 +14,25 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@ltd/j-toml": "^1.38.0",
 		"@eslint/compat": "^1.2.5",
-		"@picocss/pico": "^2.1.1",
 		"@eslint/js": "^9.22.0",
+		"@leftium/leftium-logo": "^0.0.12",
+		"@leftium/logo": "^0.0.2",
+		"@ltd/j-toml": "^1.38.0",
+		"@picocss/pico": "^2.1.1",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@types/debug": "^4.1.12",
-		"@types/node": "^22",
 		"@types/lodash": "^4.17.20",
+		"@types/node": "^22",
 		"debug": "^4.4.3",
 		"eslint": "^9.22.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
 		"iconify-icon": "^3.0.1",
 		"lodash": "^4.17.21",
-		"globals": "^16.0.0",
 		"lz-string": "^1.5.0",
 		"mdsvex": "^0.12.6",
 		"prettier": "^3.4.2",
